--- a/index.html
+++ b/index.html
@@ -28,3 +28,34 @@
 
 
 </html>
+<html lang="pt-br">
+
+<head>
+    <link rel="stylesheet" href="styles.css" />
+    <title>BarbieLand</title>
+</head>
+
+<body>
+
+    <header>BARBIELAND</header>
+
+    <section>
+        <div>
+            <h1>BARBIE TEM MUITO MAIS POR TRÁS DO QUE VOCÊ PENSA [Análise COM SPOILERS]</h1>
+            <p>#barbiethemovie</p>
+        </div>
+
+
+        <div>
+            <iframe width="560" height="315"
+                src="https://www.youtube.com/embed/gB2wsXielz4?si=RxpgIL9fgFL0GAeu&amp;controls=0"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </section>
+
+</body>
+
+
+</html>
